pre woking vers
shadcn install
tailwind install
prisma migration

--- a/.env
+++ b/.env
@@ -4,4 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+POSTGRES_URL="postgres://default:zdGw3rUkO7mP@ep-divine-wood-a2hwtk76-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:zdGw3rUkO7mP@ep-divine-wood-a2hwtk76-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:zdGw3rUkO7mP@ep-divine-wood-a2hwtk76-pooler.eu-central-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:zdGw3rUkO7mP@ep-divine-wood-a2hwtk76.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-divine-wood-a2hwtk76-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="zdGw3rUkO7mP"
+POSTGRES_DATABASE="verceldb"
