--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "node-fetch": "^3.3.2",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
