--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -43,4 +43,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+  
 }
