--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-plugin-react": "^7.34.3",
     "postcss": "^8",
-    "prettier": "3.3.2",
+    "prettier": "^3.3.2",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
